...
        case .generals:
            if let id = setting.id, let sw = cell.accessoryView as? UISwitch {
                switch id {
                case .toggleStatusBarOnPreview:
                    sw.setOn(Preferences.showStatusBarOnPreview, animated: true)
                    sw.addTarget(self, action: #selector(toggleStatusBarOnPreview), for: .valueChanged)
                    sw.accessibilityIdentifier = "toggleStatusBarOnPreview"
                    break
                case .toggleParallax:
                    sw.setOn(Preferences.parallaxEffectOnImagePreview, animated: true)
                    sw.addTarget(self, action: #selector(toggleParallaxEffect), for: .valueChanged)
                    sw.accessibilityIdentifier = "toggleParallaxEffect"
                    break
...
        case .theming:
            if let id = setting.id, let sw = cell.accessoryView as? UISwitch {
                switch id {
                case .toggleDarkTheme:
                    sw.setOn(Preferences.theme == .dark, animated: true)
                    sw.addTarget(self, action: #selector(toggleDarkTheme), for: .valueChanged)
                    sw.accessibilityIdentifier = "toggleDarkTheme"
                    break
                case .accentColor:
                    cell.accessibilityIdentifier = "accentColor"
                    break
                default:
                    break
                }
            }
            
...
                    cell.detailTextLabel?.text = Preferences.hideGesture.capitalized.split(separator: "-").joined(separator: " ")
                    break
                case .toggleHighQualityPreview:
                    if let sw = cell.accessoryView as? UISwitch {
                        sw.setOn(Preferences.highQualityPreview, animated: true)
                        sw.addTarget(self, action: #selector(toggleHighQualityPreview), for: .valueChanged)
                        sw.accessibilityIdentifier = "toggleHQPreview"
                    }
                    break
                default:
                    break
                }
            }
            return cell
        case .purchases:
            if let id = setting.id {
                switch id {
                case .restorePurchases:
                    cell.accessibilityIdentifier = "restorePurchases"
                    break
                case .removeWatermarks:
                    cell.isEnabled = !Preferences.keychain.watermarksRemoved
                    cell.accessibilityIdentifier = "removeWatermarks"
                    break
                default:
                    break
                }
            }
            
            break
        case .info:
            if let id = setting.id {
                switch id {
                case .unsplashLogin:
                    cell.isEnabled = Preferences.keychain.bearer == nil
                    cell.accessibilityIdentifier = "unsplashLogin"
                    break
                case .experimentalFeatures:
                    if let sw = cell.accessoryView as? UISwitch {
                        sw.setOn(Preferences.experimentalFeaturesEnabled, animated: true)
                        sw.addTarget(self, action: #selector(toggleExperimentalFeatures), for: .valueChanged)
                        sw.accessibilityIdentifier = "toggleExperimentalFeatures"
...
