...
        /*
         * -----------------------
         * MARK: Settings Button
         * ------------------------
         */
        let settingsBtn = UIBarButtonItem(title: "Preferences", style: .plain, target: self, action: #selector(self.openSettings));
        settingsBtn.accessibilityIdentifier = "PreferencesButton"
        settingsBtn.tintColor = navigationController?.navigationBar.tintColor
        navigationItem.rightBarButtonItem = settingsBtn
        
        setupIndicator()
        setupFavButton()
        setupNotification()
...

        cell.backgroundColor = .clear
        cell.contentView.backgroundColor = .gray
        cell.collection = collection
        
        if indexPath.row == 0 && indexPath.section == 1 {
            cell.accessibilityIdentifier = "firstHomeCell"
        }
        
        return cell
    }
    
    func getCollection(at indexPath: IndexPath) -> Unsplash.Collection {
...
