...
        )
        
        cell.label.isHidden = true
        cell.label.text = photo.id
        
        if indexPath.row == 0 {
            cell.accessibilityIdentifier = "firstCollectionCell"
        }
        
        return cell
    }

    override func collectionView(_ collectionView: UICollectionView, didSelectItemAt indexPath: IndexPath) {
...
